# sqlcpp

lesson_01/: Музыкальный сайт.drawio
lesson_02/: music_service.sql
lesson_03/: music_service_task1.sql  music_service_task2_1.sql  music_service_task2_2.sql  music_service_task3.sql
lesson_04/: CMakeLists.txt  Task_01.cpp  Task_01.h  main.cpp
